sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/SFDC_Industry_Assessment_Question__mdt.object-meta.xml
<CustomObject>
    <description>Questions asked in an industry upgrade transition assessment</description>
    <label>SFDC Industry Assessment Question</label>
    <pluralLabel>SFDC Industry Assessment Questions</pluralLabel>
</CustomObject>