sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Answer_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Answer_Field_API_Name__c</fullName>
    <label>Answer Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>