sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Question_Group__c.field-meta.xml
<CustomField>
    <fullName>Question_Group__c</fullName>
    <label>Question Group</label>
    <referenceTo>SFDC_Industry_Assessment_Question_Group__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Questions</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Questions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>