sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Question_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Help_Text__c</fullName>
    <label>Question Help Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>