sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Question_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Label_Name__c</fullName>
    <label>Question Label Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>