sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Question_Required__c.field-meta.xml
<CustomField>
    <fullName>Question_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question Required?</label>
    <type>Checkbox</type>
</CustomField>