sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/fields/Summary_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Summary_Label_Name__c</fullName>
    <label>Summary Label Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>