sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Question_Label_Name__c</columns>
    <columns>Answer_Field_API_Name__c</columns>
    <columns>Question_Help_Text__c</columns>
    <columns>Question_Required__c</columns>
    <columns>Summary_Label_Name__c</columns>
    <columns>Question_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>